--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Visual Studio Code
+.vscode/
+
+# Visual Studio
+*.vspscc
+*.vssscc
+
+# JetBrains Rider
+.idea/
+*.iml
